update google drive link

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
                 <h1 class="name">Jeremy Erik Leong Kar Ye</h1>
                 <h2 class="title">Front-end developer</h2>
                 <a class="btn btn-download"
-                    href="https://drive.google.com/file/d/11bCcCfpELSGXaU4l7aFZgDTT-sQ9zzV0/view?usp=sharing"
-                    target="_blank"><i class="fas fa-file-download"></i>Resume (pdf)</a>
+                    href="https://drive.google.com/file/d/11HgmQoUImd5FVKpDdE6QfN4st4CwjDxM/view" target="_blank"><i
+                        class="fas fa-file-download"></i>Resume (pdf)</a>
             </div>
             <div class="resume-bottom">
                 <div class="contact">
